--- a/mystyle.css
+++ b/mystyle.css
@@ -1,1 +1,4 @@
-
+h1 { color: blue; }
+h1 { color: green}
+<title>Web開発の練習2024秋季</title>
+<link rel="stylesheet" href="mystyle.css"> <!--　この行を追加　-->
